# odoo

./: .git-blame-ignore-revs  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: foo.yml  lint.yml  test.yml
addons/account/: README.md  __init__.py  __manifest__.py
addons/account_analytic_default/: __manifest__.py
addons/account_asset/: __manifest__.py
addons/account_bank_statement_import/: __manifest__.py  account_bank_statement_import.py  account_journal.py
addons/account_budget/: __manifest__.py
addons/account_cancel/: __manifest__.py
addons/account_cash_basis_base_account/: __init__.py  __manifest__.py  account_partial_reconcile.py  account_tax.py
addons/account_check_printing/: __manifest__.py
addons/account_invoicing/: __init__.py  __manifest__.py
addons/account_lock/: __manifest__.py
addons/account_payment/: __manifest__.py
addons/account_tax_python/: __init__.py  __manifest__.py
addons/account_test/: __manifest__.py
addons/account_voucher/: README.md  __manifest__.py
addons/analytic/: __manifest__.py
addons/anonymization/: __manifest__.py
addons/association/: __manifest__.py
addons/auth_crypt/: __manifest__.py
addons/auth_ldap/: __manifest__.py
addons/auth_oauth/: __manifest__.py
addons/auth_signup/: __manifest__.py
addons/barcodes/: __manifest__.py
addons/base_address_city/: __manifest__.py
addons/base_address_extended/: __manifest__.py
addons/base_automation/: __init__.py  __manifest__.py
addons/base_gengo/: __init__.py  __manifest__.py
addons/base_geolocalize/: __manifest__.py
(+2310 files in other folders)
