[tool.poetry]
name = "Odoo ERP"
version = "1.0.0"
description = "Odoo ERP repository"
authors = ["Robolabs"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11.0"

[tool.poetry.dev-dependencies]
pre-commit = "*"

[tool.ruff]
fix = true

[tool.ruff.lint]
extend-select = [
    "UP",  # pyupgrade
    "I",  # isort
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["I"]
